# WireGuard_keygen

./: Cargo.toml  README.md  privatekey_10.0.0.4  publickey_10.0.0.4  system.conf
src/: main.rs
src/assets/: client.rs
