[package]
name = "wg_keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level="z"
lto = true
strip = true
codegen-units  =  1
debug = 0



[dependencies]
actix-web = "4.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
